# StortSpelBTH_Engine

./: .gitignore  .gitmodules  3D_VEngine.code-workspace  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vengine.sln
Kronos/: CMakeLists.txt  CMakePresets.json  Kronos.sln  Kronos.vcxproj  Kronos.vcxproj.filters  Main.cpp
Kronos/Engine/: Engine.cpp  Engine.h  SMath.cpp  SMath.h
Kronos/Engine/Application/: Input.cpp  Input.h  Time.h  Window.cpp  Window.h
Kronos/Engine/DataStructures/: BSP.cpp  BSP.h  BSPNode.cpp  BSPNode.h
Kronos/Engine/Dev/: Log.cpp  Log.h
Kronos/Engine/Graphics/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
Kronos/Engine/Graphics/Shaders/: FragmentShader.cpp  FragmentShader.h  Shader.cpp  Shader.h  VertexShader.cpp  VertexShader.h
Kronos/Engine/Graphics/Vulkan/: CommandBuffer.cpp  CommandBuffer.h  CommandBufferArray.cpp  CommandBufferArray.h  CommandPool.cpp  CommandPool.h  DebugMessenger.cpp  DebugMessenger.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetArray.cpp  DescriptorSetArray.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Device.cpp  Device.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineLayout.h  QueueFamilies.cpp  QueueFamilies.h  RenderPass.cpp  RenderPass.h  SupportChecker.cpp  SupportChecker.h  Surface.cpp  Surface.h
Kronos/Resources/Shaders/: compile.bat  frag.spv
Kronos/Resources/Shaders/FragmentShaders/: Default.frag
Kronos/Resources/Shaders/VertexShaders/: Default.vert
assets/: config.cfg
assets/models/: fine_ghost.mtl  ghost.mtl
assets/shaders/: history_blob
cmake/: 3D_VEngineConfig.cmake.in  Findvengine_imgui.cmake  Findvengine_tracy.cmake  Findvengine_vma.cmake  defs.cmake  helper_funcs.cmake  program_dependencies.cmake  setup_conan.cmake  vengineConfig.cmake.in  vengine_helpers.cmake
demos/basic_demo/: CMakeLists.txt  basic_demo.vcxproj  basic_demo.vcxproj.filters  luatestScene.lua  main.cpp  skeletalAnimation.txt
demos/basic_demo/assets/: config.cfg
demos/basic_demo/assets/models/: Swarm_Model.fbx  fine_ghost.mtl  ghost.mtl  pussel1.fbx  pussel1_2.fbx  pussel1_3.fbx  pussel1_4.fbx  pussel1_5.fbx  pussel2_0.fbx  run_forward.fbx  run_forward_correct.fbx  stickFirst.fbx  stickSecond.fbx  stickThird.fbx
demos/basic_demo/assets/models/Amogus/source/: 2.fbx
demos/basic_demo/assets/models/char/: cAttack.fbx  cAttack2.fbx  cIdle.fbx  cRun.fbx
demos/basic_demo/assets/scripts/: button.lua  collisionchecks.lua  multianim.lua  scene.lua  script.lua  script2.lua  system.lua  test.lua
demos/basic_demo/assets/scripts/metatables/: vector.lua
demos/basic_demo/assets/scripts/prefabs/: prefab.lua
demos/basic_demo/assets/shaders/: second.vert
demos/basic_demo/src/: Headers.h  LevelEditorTestScene.cpp  LevelEditorTestScene.h  LobbyScene.cpp  LobbyScene.h  NetworkTestScene.cpp  NewTestScene.cpp  NewTestScene.h  Randomizer.cpp  Randomizer.hpp  Room.cpp  Room.hpp  SceneTest.cpp  SceneTest.h  TestDemoScene.cpp  TestDemoScene.h  TheServerGame.cpp  TheServerGame.h  main.cpp
demos/basic_demo/src/network/: LobbyScene.cpp  LobbyScene.h  NetworkHandlerTest.cpp  NetworkHandlerTest.h  NetworkTestScene.cpp  NetworkTestScene.h  TheServerGame.cpp  TheServerGame.h
demos/minimal_demo/: CMakeLists.txt  main.cpp  minimal_demo.vcxproj
docs/: Lua.md  Lua_Server.md
src/: Application.h  Application.hpp  Camera.hpp  Configurator.cpp  Device.cpp  Device.h  Device.hpp  Engine.cpp  Engine.h  Engine.hpp  Input.cpp  Input.h  Instance.cpp  Instance.h  Log.cpp  Log.h  Mesh.cpp  Mesh.h  Mesh.hpp  Model.cpp  Model.h  Model.hpp  PhysicalDevice.cpp  PhysicalDevice.h  PhysicalDevice.hpp  Scene.cpp  Scene.h  SceneHandler.cpp  SceneHandler.h  SceneHandler.hpp  Swapchain.cpp  Swapchain.hpp  TempPCH.h  TestScene.cpp  TestScene.h  TestScene.hpp  TestScene2.cpp  TestScene2.h  TestScene2.hpp  Texture.cpp  (+27 more)
test_src/: secion2_setupAndCompabilityTest.cpp  secion2_setupAndCompabilityTest.h
tools/: count_validations.sh  remote_imgui_ini.sh  run_gpuMemDump.sh
vengine/: .clang-format  config.cfg  vengine.h  vengine.vcxproj  vengine.vcxproj.filters
vengine/assetsEngine/: config.cfg
vengine/src/: Client.cpp  Client.h  CommonMeshStructs.hpp  Engine.cpp  Engine.hpp  Input.cpp  Mesh.cpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  Model.hpp  NetworkEnumAndDefines.h  NetworkHandler.cpp  NetworkHandler.h  NewModel.cpp  NewModel.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceManagerStructs.hpp  Scene.cpp  Scene.hpp  SceneHandler.cpp  Server.cpp  Server.h  ServerGame.cpp  ServerGame.h  Swapchain.cpp  Swapchain.hpp  TestScene2.cpp  Texture.cpp  TextureLoader.cpp  TextureLoader.hpp  Timer.h  Utilities.cpp  Utilities.hpp  VulkanInstance.cpp  VulkanRenderer.cpp  VulkanRenderer.hpp  (+2 more)
vengine/src/Application/: SceneHandler.cpp
vengine/src/Graphics/: Model.cpp  Texture.cpp  VulkanRenderer.cpp  VulkanRenderer.hpp
vengine/src/Systems/: System.hpp  UpdateMatricesSystem.hpp
vengine/src/Test/: TestScene2.hpp
vengine/src/application/: Input.hpp  Scene.cpp  Scene.hpp  SceneHandler.cpp  Window.cpp  Window.hpp
vengine/src/application0/: Scene.cpp  Scene.hpp  SceneHandler.cpp  Window.cpp
vengine/src/dev/: defs.hpp
vengine/src/dev0/: Log.cpp  tracyHelper.cpp
vengine/src/graphics/: Buffer.cpp  Buffer.hpp  Mesh.cpp  Model.cpp  Texture.cpp  Texture.hpp  Utilities.cpp  Utilities.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
vengine/src/graphics0/: Texture.cpp  Utilities.cpp  VulkanRenderer.cpp  VulkanRenderer.hpp
vengine/vengine/: Configurator.cpp  Configurator.hpp  Engine.cpp  Engine.hpp  Model.hpp  Utilities.cpp  VengineHelper.h  VengineMath.hpp  VulkanDbg.cpp  VulkanRenderer.cpp  VulkanRenderer.hpp  performance_checker.cpp  performance_checker.hpp  stb.cpp
vengine/vengine_assets/: config.cfg
(+338 files in other folders)
